apps/pgcluster/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg-operator
  namespace: devops-db
  podSelector:
    matchLabels:
      cnpg.io/cluster: devops-db
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 8000
        - port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: devops-db
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-operators
  namespace: devops-db
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flux-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: crossplane-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress-to-db
  namespace: devops-db
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: devops-forgejo
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: devops-keycloak
